refactoring, ui cleanup

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,16 @@
 #logo {
     width: 50%;
     max-width: 450px;
+    min-width: 200px;
 }
 h1 {
     line-height: 1.25em;
+    font-size: 2em;
+}
+h2 {
+    font-size: 1.5em;
+}
+#jspsych-survey-text-next{
+    color: #ffffff;
+    background-color: #37904b;
 }
