--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,11 @@ h1 {
 h2 {
     font-size: 1.5em;
 }
+p {
+    font-size: 1.1em;
+}
 #jspsych-survey-text-next{
     color: #ffffff;
     background-color: #37904b;
+    font-size: 0.9em;
 }
