--- a/study_assets_root/questionaire/stylesheet.css
+++ b/study_assets_root/questionaire/stylesheet.css
@@ -18,7 +18,7 @@ p {
     background-color: #37904b;
     font-size: 0.9em;
 }
-#jspsych-language-info-next, #jspsych-gender-info-next{
+#jspsych-language-info-next, #jspsych-gender-info-next, #jspsych-survey-multi-choice-next{
     color: #ffffff;
     background-color: #37904b;
     font-size: 0.9em;
@@ -30,9 +30,9 @@ p {
     line-height: 1.4;
     white-space: nowrap;
     border: 1px solid transparent;
-    border-radius: 4px;
+    border-radius: 4px; 
 }
-#jspsych-language-info-next:hover, #jspsych-gender-info-next:hover{
+#jspsych-language-info-next:hover, #jspsych-gender-info-next:hover, #jspsych-survey-multi-choice-next:hover{
     cursor: pointer;
 }
 .jspsych-language-info-header td{
@@ -47,4 +47,22 @@ p {
 }
 #gender-other-container{
     padding-bottom: 10px;
+}
+
+
+
+.jspsych-survey-multi-choice-question p{ 
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.jspsych-survey-multi-choice-horizontal .jspsych-survey-multi-choice-text { 
+    text-align: center;
+}
+
+.jspsych-survey-multi-choice-horizontal .jspsych-survey-multi-choice-option {
+    display: inline-block;  
+    margin-left: 1em;  
+    margin-right: 1em;  
+    vertical-align: top;
 }
