+ ability for multi-choice.js to support horizontal answers + towel basis + familiarity ratings + 6-way counterbalancing

--- a/study_assets_root/shared_assets/stylesheet.css
+++ b/study_assets_root/shared_assets/stylesheet.css
@@ -74,6 +74,9 @@ input[type="radio"]{
 .rightCol{
     flex: 1;
 }
+.horizontal{
+    display: inline-block !important;
+}
 #passage-highlight-english, #multi-choice-passage-english{
     
     width: 60%;
