error checking implemented

--- a/study_assets_root/shared_assets/stylesheet.css
+++ b/study_assets_root/shared_assets/stylesheet.css
@@ -109,6 +109,9 @@ input[type="radio"]{
     background-color: #ff1900;
     /* padding: .1em; */
 }
+.error{
+    color: #ff1900;
+}
 
 .correct:hover, .incorrect:hover{
     cursor: pointer;
