added formatting for Community's new plug-ins
<script src="shared_assets/js/family-info.js"></script>
<script src="shared_assets/js/other-info.js"></script>

--- a/study_assets_root/shared_assets/stylesheet.css
+++ b/study_assets_root/shared_assets/stylesheet.css
@@ -18,7 +18,7 @@ p {
     background-color: #37904b;
     font-size: 0.9em;
 }
-#jspsych-language-info-next, #jspsych-gender-info-next, #survey-yes-no-next, #music-info-next{
+#jspsych-language-info-next, #family-info-next, #other-info-next, #member-info-next, #members-info-next, #jspsych-gender-info-next, #survey-yes-no-next, #music-info-next{
     color: #ffffff;
     background-color: #37904b;
     font-size: 0.9em;
